# ms-ai-edu

./: memo.txt
KTdsSamples/: .env  01.sample.py  03.streamlit.py  04.AIpoemWeb.py  05.chat_interface.py  main.py  pyproject.toml
WebAppSample/: .env  main.py  pyproject.toml  rag-app.py
WebAppTest/: .env  01.computervision.py  02.object_detect.py  main.py  pyproject.toml
final-test/: README.md  azure_ai_code_analyzer_proposal.md  gpt-result.py  main.py  pyproject.toml  requirements.txt  result.md  streamlit.sh  제안서.md
final-test/fonts/: ArialUnicode.pkl  NanumGothic-Regular.pkl
ktds-llm/: .env  DAY01_002_Langchain_Components.ipynb  DAY01_003_LangSmith_LCEL.ipynb  DAY01_004_LangServe.ipynb  DAY01_005_RAG.ipynb  DAY02_001_RAG_Evalution.ipynb  DAY03_001_ToolCalling_Agent.ipynb  DAY03_002_LangChain_Tools.ipynb  DAY03_003_LangGraph_StateGraph.ipynb  DAY03_004_LangGraph_MessageGraph.ipynb  pyproject.toml
ktds-llm/app/: server.py
ktds-llm/chroma_db/: chroma.sqlite3
ms-ai-edu/: memo.txt
ms-ai-edu/ktds-llm/: .env  DAY01_002_Langchain_Components.ipynb  DAY01_005_RAG.ipynb  DAY01_006_Prompt_Engineering_Fewshot.ipynb  DAY01_007_Langfuse_Pompt_Management.ipynb
ms-ai-edu/ktds-llm/data/: ragas_testset.csv
