[project]
name = "ktds-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "gradio>=5.34.2",
    "ipykernel>=6.29.5",
    "langchain>=0.3.26",
    "langchain-chroma>=0.2.4",
    "langchain-cli>=0.0.36",
    "langchain-community>=0.3.26",
    "langchain-openai>=0.3.24",
    "langchain-text-splitters>=0.3.8",
    "langfuse>=3.0.4",
    "langgraph>=0.4.8",
    "langserve[all]>=0.3.1",
    "pillow>=11.2.1",
    "pypdf>=5.6.1",
    "python-dotenv>=1.1.0",
    "ragas>=0.2.15",
    "rapidfuzz>=3.13.0",
]
